test/files/neg/macro-invalidsig-tparams-bounds-b/Impls_1.scala
import scala.reflect.macros.{Context => Ctx}

object Impls {
  def foo[U <: String](c: Ctx) = ???
}
